fix:allow scroll overflow for alerts settings tab

--- a/src/SideBar/styles.module.scss
+++ b/src/SideBar/styles.module.scss
@@ -155,6 +155,10 @@
   min-width: var(--sidebar-width);
   transition: width 0.4s ease-in-out;
 
+  &.alertsTabBody {
+    overflow-y: auto;
+  }
+
   &:hover,
   &:focus {
     border: none;
